added requirements for pip install

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,9 @@
-RUN apt-get update && \
-    apt-get install -y npm && \
-    npm install -g configurable-http-proxy && \
-    apt-get remove -y npm && \
-    apt-get clean && \
-    apt-get autoclean && \
-    apt-get autoremove && \
-    pip3 install --upgrade pip && \
-    pip3 install \
-        matplotlib \
-        scipy \
-        numpy \
-        pandas \
-        beautifulsoup4 \
-        plotly \
-        #        torch \
-        jupyter \
-        jupyterhub
-
-CMD [ "jupyterhub" ]
+matplotlib
+scipy
+numpy
+pandas
+beautifulsoup4
+plotly
+torch
+jupyter
+jupyterhub
